--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231022" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231024" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,15 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="feast" class="feast-container">
+      <article class="feast" role="img" aria-label="Cartoon of a cornucopia with the text 'Happy Thanksgiving!'"></article>
+    </section>
+    <section id="fake2" class="fake2-container">
+      <article class="fake2" role="img" aria-label="Caricature of an American politician with orange face saying 'Fake News!'"></article>
+    </section>
+    <section id="fake" class="full fake-container">
+      <article class="fake" role="img" aria-label="Cartoon of a turtle wearing a shark fin"></article>
+    </section>
     <section id="alive" class="alive-container">
       <a href="https://www.youtube.com/watch?v=vmX9O0jLe4Y" class="youtube-link">Coding video</a>
       <article class="alive" role="img" aria-label="Cartoon of a sextant (a navigational instrument to measure distances)"></article>
