new cartoon: cheesy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231024" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231025" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,9 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="cheesy" class="full cheesy-container">
+      <article class="cheesy" role="img" aria-label="Cartoon of a triangular piece of cheese in kawaii style"></article>
+    </section>
     <section id="feast" class="feast-container">
       <article class="feast" role="img" aria-label="Cartoon of a cornucopia with the text 'Happy Thanksgiving!'"></article>
     </section>
