new drawing: cold

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="cheesy" class="full cold-container">
+      <article class="cold" role="img" aria-label="the 'cold' emoji. A blue circle with eyes, teeth chattering, and icicles hanging from face and mouth"></article>
+    </section>
     <section id="cheesy" class="full cheesy-container">
       <article class="cheesy" role="img" aria-label="Cartoon of a triangular piece of cheese in kawaii style"></article>
     </section>
