--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231026" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231028" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,13 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="handmade" class="handmade-container">
+      <a href="https://www.youtube.com/watch?v=EeUH6-Ow6x0" class="youtube-link">Coding video</a>
+      <article class="handmade" role="img" aria-label="a logo with the words 'hand made', and two needles crossing through a ball of wool"></article>
+    </section>
+    <section id="rules" class="rules-container">
+      <article class="rules" role="img" aria-label="cartoon a bunch of traffic signs"></article>
+    </section>
     <section id="cheesy" class="full cold-container">
       <article class="cold" role="img" aria-label="the 'cold' emoji. A blue circle with eyes, teeth chattering, and icicles hanging from face and mouth"></article>
     </section>
