--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231028" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231030" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,13 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="discontinued" class="discontinued-container">
+      <article class="discontinued" role="img" aria-label="A store front with a big 'Closed' sign on, a note says that a Spirit Halloween will open soon"></article>
+    </section>
+    <section id="pin" class="pin-container">
+      <article class="pin" role="img" aria-label="a closed security pin"></article>
+      <article class="pin open" role="img" aria-label="an open security pin"></article>
+    </section>
     <section id="handmade" class="handmade-container">
       <a href="https://www.youtube.com/watch?v=EeUH6-Ow6x0" class="youtube-link">Coding video</a>
       <article class="handmade" role="img" aria-label="a logo with the words 'hand made', and two needles crossing through a ball of wool"></article>
