--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <title>Single Div Drawings</title>
 
-    <link rel="stylesheet" href="./css/styles.css?date=20230630" />
+    <link rel="stylesheet" href="./css/styles.css?date=20230631" />
     <link rel="stylesheet" href="./css/drawings.min.css?date=20231030" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
@@ -42,6 +42,9 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="witchy" class="tall witchy-container">
+      <article class="witchy" role="img" aria-label="A kawaii-ish witch with green skin, wearing a dark gray robe and pointy hat"></article>
+    </section>
     <section id="discontinued" class="discontinued-container">
       <article class="discontinued" role="img" aria-label="A store front with a big 'Closed' sign on, a note says that a Spirit Halloween will open soon"></article>
     </section>
